--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -30,6 +30,7 @@
 .navLinks {
   display: flex;
   list-style: none;
+  transition: transform 0.3s ease-in;
 }
 
 .navLinks li {
@@ -50,14 +51,15 @@
   .navLinks {
     position: absolute;
     right: 0;
-    height: 100vh;
     top: 0;
+    height: 100vh;
     background-color: #333;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 100%;
-    transition: transform 0.3s ease-in;
     transform: translateX(100%);
+    z-index: 1000;
   }
 
   .navLinks.open {
